Fixing menu image vertical align

--- a/sites/all/themes/storvargen/less/main.less
+++ b/sites/all/themes/storvargen/less/main.less
@@ -62,6 +62,10 @@ html {
 										margin: 0;
 										padding: 0;
 
+										img {
+											vertical-align: baseline;
+										}
+
 										/*a.home-link {
 											content: url('../images/storvargen_nav_banner.png');
 										}
